[metadata]
name = test-data-lockbox
version = 0.0.1
author = Harrison Greenlee
author_email = greenlee.harrison@gmail.com
description = An educational package designed to help prevent evaluation bias in data science
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HarrisonGreenlee/test-data-lockbox
project_urls =
    Bug Tracker = https://github.com/HarrisonGreenlee/test-data-lockbox/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src